--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snackbase/sdk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "JavaScript/TypeScript SDK for SnackBase",
   "exports": {
     ".": {
@@ -26,7 +26,7 @@
     "prepublishOnly": "npm run build && npm run test"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -44,5 +44,8 @@
     "typescript": "^5.3.3",
     "vite": "^7.3.1",
     "vitest": "^1.2.1"
+  },
+  "dependencies": {
+    "@snackbase/sdk": "^0.1.1"
   }
 }
