--- a/package.json
+++ b/package.json
@@ -1,19 +1,7 @@
 {
-  "name": "@snackbase/sdk",
-  "version": "0.2.0",
-  "description": "JavaScript/TypeScript SDK for SnackBase",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./react": {
-      "import": "./dist/react/index.mjs",
-      "require": "./dist/react/index.js",
-      "types": "./dist/react/index.d.ts"
-    }
-  },
+  "name": "snackbase-monorepo",
+  "private": true,
+  "description": "Monorepo for SnackBase SDK and React integration",
   "scripts": {
     "dev": "tsdown src/index.ts src/react/index.ts --watch",
     "build": "tsdown src/index.ts src/react/index.ts",
@@ -22,8 +10,7 @@
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx",
-    "prepublishOnly": "npm run build && npm run test"
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0"
@@ -44,8 +31,5 @@
     "typescript": "^5.3.3",
     "vite": "^7.3.1",
     "vitest": "^1.2.1"
-  },
-  "dependencies": {
-    "@snackbase/sdk": "^0.1.1"
   }
 }
