--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,6 +44,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^19.2.13",
-    "@types/react-dom": "^19.2.3"
+    "@types/react-dom": "^19.2.3",
+    "@snackbase/tsconfig": "workspace:*"
   }
 }
