--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -33,5 +33,8 @@
     "database"
   ],
   "author": "SnackBase Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@snackbase/tsconfig": "workspace:*"
+  }
 }
