build: add `publishConfig` with `access: "public"` to react, sdk, and skills packages.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,6 +42,9 @@
   ],
   "author": "SnackBase Team",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
