feat: Add a new "todo" application template to `create-snackbase-app` with authentication, UI components, and todo management.

--- a/packages/create-snackbase-app/package.json
+++ b/packages/create-snackbase-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "bin": {
-    "create-snackbase-app": "./dist/index.js"
+    "create-snackbase-app": "./dist/index.mjs"
   },
   "files": [
     "dist",
