--- a/packages/create-snackbase-app/package.json
+++ b/packages/create-snackbase-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snackbase/create-snackbase-app",
+  "name": "create-snackbase-app",
   "version": "0.1.0",
   "type": "module",
   "bin": {
